# rust-zeroize-example

./: Cargo.toml  README.md
src/: main.rs
